# interpreter

./: CMakeLists.txt  README.md  ast.hpp  interpreter.hpp  lexer.hpp  parser.hpp  scope.hpp  test-lexer.cpp
bricks/: brick-types
test/: RealFact.txt  SomeOtherRec.txt  data.txt  fact.txt  scope.txt  scope1.txt  scope2.txt  testdata2.txt  testdata3.txt
